--- a/src/app/components/report-daily2/report-daily2.component.html
+++ b/src/app/components/report-daily2/report-daily2.component.html
@@ -12,7 +12,7 @@
       </ion-text>
       <br>
       <ion-text color="hk-darkgrey">Pulang : </ion-text>
-      <ion-text color="dark">{{ txtTimeBack }}</ion-text>
+      <ion-text color="dark">{{ txtTimeReturn }}</ion-text>
     </ion-col>
   </ion-row>
 </ion-grid>
