--- a/src/app/pages/reports/reports.page.html
+++ b/src/app/pages/reports/reports.page.html
@@ -9,7 +9,7 @@
 
 <ion-content style="height: 100%">
   <ion-row justify-content-center style="padding: 5px">
-    <ion-segment (ionChange)="segmentChanged()" [(ngModel)]="segment" color="hk-purple" mode="ios" shape="round">
+    <ion-segment (ionChange)="SegmentChanged()" [(ngModel)]="segment" color="hk-purple" mode="ios" shape="round">
       <ion-segment-button value="0">
         <ion-label>Harian</ion-label>
       </ion-segment-button>
@@ -22,15 +22,21 @@
   <div [ngSwitch]="segment">
     <div *ngSwitchCase="'0'">
       <app-report-daily></app-report-daily>
+
+      <ion-fab vertical="bottom" horizontal="end" slot="fixed">
+        <ion-fab-button mode="ios" color="hk-red" (click)="AddNewRequest()">
+          <ion-icon name="add"></ion-icon>
+        </ion-fab-button>
+      </ion-fab>
     </div>
   </div>
 
-  <ion-slides #slides (ionSlideDidChange)="slideChanged()" style="min-height: 100%">
-    <ion-slide align-self-start justify-content-start align-items-start style="display: block">
+  <ion-slides #slides (ionSlideDidChange)="SlideChanged()" style="min-height: 100%">
+    <ion-slide align-self-start justify-content-start align-items-start style="display: block;">
       <app-report-daily2></app-report-daily2>
     </ion-slide>
 
-    <ion-slide style="display: block">
+    <ion-slide style="display: block;">
       <app-report-monthly></app-report-monthly>
     </ion-slide>
   </ion-slides>
