- Bug fix getUserIdFromStorage TO getUserDataFromStorage

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -32,7 +32,7 @@
         <ion-text>Pulang : {{txtTimeReturn}}</ion-text>
       </ion-col>
       <ion-col class="ion-float-right" size="4" style="background: transparent">
-        <ion-text (click)="navigateToReportPage(0)">Detail </ion-text>
+        <ion-text (click)="NavigateToReportPage(0)">Detail </ion-text>
         <ion-icon name="arrow-forward" mode="ios" style="font-size: 14px; vertical-align: middle"></ion-icon>
       </ion-col>
     </ion-row>
