--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -7,10 +7,10 @@
             <img src="../../../assets/images/popover-1.png">
           </ion-avatar>
         </div>
-        <ion-text style="font-size: 18px; font-weight: 700;">{{ txtUserName }}Nur Ridho A</ion-text><br>
-        <ion-text style="font-size: 14px;">{{ txtUserId }}KD18.9677</ion-text><br>
-        <ion-text style="font-size: 14px;">{{ txtDivisionName }}Divisi Sistem dan Risiko</ion-text><br>
-        <ion-text style="font-size: 14px;">{{ txtSectionName }}Bagian TI</ion-text>
+        <ion-text style="font-size: 18px; font-weight: 700;">{{ txtUserName }}</ion-text><br>
+        <ion-text style="font-size: 14px;">{{ txtUserId }}</ion-text><br>
+        <ion-text style="font-size: 14px;">{{ txtDivisionName }}</ion-text><br>
+        <ion-text style="font-size: 14px;">{{ txtSectionName }}</ion-text>
       </div>
     </ion-header>
     <ion-content>
