- Delete chip pada footer home page - Add 'permission' pada menu - Modify fab button pada report page

--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -23,7 +23,7 @@
       </ion-menu-toggle>
       <hr>
       <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;">
-        <ion-text>Setting and Privacy</ion-text>
+        <ion-text>Settings and Privacy</ion-text>
       </ion-item>
       <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;">
         <ion-text>Help Center</ion-text>
