--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -38,7 +38,7 @@
     </ion-row>
   </ion-grid>
 
-  <ion-chip class="ontime">
+  <!-- <ion-chip class="ontime">
     <ion-label color="light">On Time</ion-label>
   </ion-chip>
 
@@ -48,7 +48,7 @@
 
   <ion-chip class="diluarkantor">
     <ion-label color="light">Absen Diluar Kantor</ion-label>
-  </ion-chip>
+  </ion-chip> -->
 
   <ion-button expand="block" shape="round" color="hk-red" (click)="ButtonAbsen()">ABSEN</ion-button>
 </ion-footer>
