--- a/src/app/pages/form-request/form-request.page.html
+++ b/src/app/pages/form-request/form-request.page.html
@@ -5,6 +5,7 @@
     </ion-buttons>
     <ion-title *ngIf="AC005">form-lembur</ion-title>
     <ion-title *ngIf="AC002">form-terlambat</ion-title>
+    <ion-title *ngIf="AC003">form-absen-diluar</ion-title>
     <ion-title *ngIf="AC004">form-pulang-cepat</ion-title>
   </ion-toolbar>
 </ion-header>
@@ -15,6 +16,9 @@
   </div>
   <div *ngIf="AC002">
     <app-form-terlambat></app-form-terlambat>
+  </div>
+  <div *ngIf="AC003">
+      <app-form-absen-diluar></app-form-absen-diluar>
   </div>
   <div *ngIf="AC004">
     <app-form-pulang-cepat></app-form-pulang-cepat>
