--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.scss
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.scss
@@ -1,10 +1,29 @@
 ion-card {
     ion-card-content {
-        .center {
+        .picture {
+            .center {
+                display: block;
+                margin-left: auto;
+                margin-right: auto;
+                width: 100%;
+            }
+        }
+        .takepicture {
             display: block;
             margin-left: auto;
-            margin-right: auto;
-            width: 100%;
+            // margin-right: auto;
+            // width: 100%;
         }
     }
 }
+
+// ion-card {
+//     ion-card-content {
+//         .center {
+//             display: block;
+//             margin-left: auto;
+//             margin-right: auto;
+//             width: 100%;
+//         }
+//     }
+// }
