--- a/src/app/components/form-lembur/form-lembur.component.html
+++ b/src/app/components/form-lembur/form-lembur.component.html
@@ -1,10 +1,32 @@
 <ion-card>
   <ion-card-header>
     <ion-card-subtitle>Form Lembur</ion-card-subtitle>
-    <ion-card-title>Lembur</ion-card-title>
   </ion-card-header>
 
   <ion-card-content>
-    Lembur
+    <ion-col>
+      <ion-item>
+        <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
+         -->
+         {{txtTimeNow}}
+      </ion-item>
+    </ion-col>
+
+
+    <ion-col>
+      <ion-item>
+        <ion-input type="text" placeholder="Alasan Lembur" [(ngModel)]="txtDesc" name="txtDesc" required></ion-input>
+      </ion-item>
+    </ion-col>
+
+    
   </ion-card-content>
+
+  <ion-row class="ion-align-items-center">
+    <ion-col class="signup-col">
+      <ion-button shape="round" expand="block" color='hk-red' (click)="SaveLateRequest()" type="submit">Submit
+      </ion-button>
+    </ion-col>
+  </ion-row>
+  
 </ion-card>
