--- a/src/app/pages/notifications/notifications.page.scss
+++ b/src/app/pages/notifications/notifications.page.scss
@@ -1,6 +1,6 @@
-ion-content {
+.content {
   --background: none;
-  background-image: url("../../../assets/images/bg-4.png");
+  background-image: url("../../../assets/images/bg-5.png");
   background-position: center top;
   background-repeat: no-repeat;
   background-size: 100%;
