Menambahkan : - Fitur Camera - Isian Form Diluar - Ganti Nama method Pulang Cepat

--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -23,13 +23,13 @@
     </ion-col>
 
     <ion-col class="picture">
-      <img src="{{ photos }}" class="center" />
+      <img src="{{ photo }}" class="center" />
     </ion-col>
   </ion-card-content>
 
   <ion-row class="ion-align-items-center">
     <ion-col class="signup-col">
-      <ion-button shape="round" expand="block" color='hk-red' (click)="SaveLateRequest()" type="submit">Submit
+      <ion-button shape="round" expand="block" color='hk-red' (click)="SaveOutsideRequest()" type="submit">Submit
       </ion-button>
     </ion-col>
   </ion-row>
