--- a/src/app/pages/form-request/form-request.page.html
+++ b/src/app/pages/form-request/form-request.page.html
@@ -3,10 +3,10 @@
     <ion-buttons slot="start">
       <ion-back-button color="hk-white-red"></ion-back-button>
     </ion-buttons>
-    <ion-title *ngIf="AC002">form-terlambat</ion-title>
-    <ion-title *ngIf="AC003">form-absen-diluar</ion-title>
-    <ion-title *ngIf="AC005">form-pulang-cepat</ion-title>
-    <!-- <ion-title *ngIf="AC004">form-pulang-diluar</ion-title> -->
+    <ion-title *ngIf="AC002">Form Terlambat</ion-title>
+    <ion-title *ngIf="AC003">Form Datang Diluar</ion-title>
+    <ion-title *ngIf="AC005">Form Pulang Cepat</ion-title>
+    <ion-title *ngIf="AC004">Form Pulang Diluar</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -15,12 +15,12 @@
     <app-form-terlambat></app-form-terlambat>
   </div>
   <div *ngIf="AC003">
-      <app-form-absen-diluar></app-form-absen-diluar>
+    <app-form-absen-diluar></app-form-absen-diluar>
   </div>
   <div *ngIf="AC005">
     <app-form-pulang-cepat></app-form-pulang-cepat>
   </div>
-  <!-- <div *ngIf="AC004">
-    <app-form-pulang-diluar></app-form-pulang-diluar>
-  </div> -->
+  <div *ngIf="AC004">
+    <app-form-absen-diluar></app-form-absen-diluar>
+  </div>
 </ion-content>
