--- a/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
+++ b/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
@@ -24,7 +24,7 @@
 
   <ion-row class="ion-align-items-center">
     <ion-col class="signup-col">
-      <ion-button shape="round" expand="block" color='hk-red' (click)="SaveLateRequest()" type="submit">Submit
+      <ion-button shape="round" expand="block" color='hk-red' (click)="SaveBackRequest()" type="submit">Submit
       </ion-button>
     </ion-col>
   </ion-row>
