--- a/src/app/components/form-absen-diluar/form-absen-diluar.component.html
+++ b/src/app/components/form-absen-diluar/form-absen-diluar.component.html
@@ -6,12 +6,9 @@
   <ion-card-content>
     <ion-col>
       <ion-item>
-        <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
-         -->
-         {{txtTimeNow}}
+        {{txtTimeRequest}}
       </ion-item>
     </ion-col>
-
 
     <ion-col>
       <ion-item>
