--- a/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
+++ b/src/app/components/form-pulang-cepat/form-pulang-cepat.component.html
@@ -8,7 +8,7 @@
       <ion-item>
         <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
          -->
-         {{txtTimeNow}}
+         {{txtTimeRequest}}
       </ion-item>
     </ion-col>
 
