--- a/src/app/components/form-terlambat/form-terlambat.component.html
+++ b/src/app/components/form-terlambat/form-terlambat.component.html
@@ -6,20 +6,15 @@
   <ion-card-content>
     <ion-col>
       <ion-item>
-        <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
-         -->
-         {{txtTimeNow}}
+        {{txtTimeRequest}}
       </ion-item>
     </ion-col>
-
 
     <ion-col>
       <ion-item>
         <ion-input type="text" placeholder="Alasan Terlambat" [(ngModel)]="txtDesc" name="txtDesc" required></ion-input>
       </ion-item>
     </ion-col>
-
-    
   </ion-card-content>
 
   <ion-row class="ion-align-items-center">
@@ -28,5 +23,5 @@
       </ion-button>
     </ion-col>
   </ion-row>
-  
+
 </ion-card>
