Rencana Nambahin Notification

--- a/src/app/components/report-daily2/report-daily2.component.html
+++ b/src/app/components/report-daily2/report-daily2.component.html
@@ -7,9 +7,7 @@
     </ion-col>
     <ion-col size="10" style="text-align: left; font-size: 16px">
       <ion-text color="hk-darkgrey">Datang : </ion-text>
-      <ion-text color="dark">{{ txtTimeArrived }}
-
-      </ion-text>
+      <ion-text color="dark">{{ txtTimeArrived }}</ion-text>
       <br>
       <ion-text color="hk-darkgrey">Pulang : </ion-text>
       <ion-text color="dark">{{ txtTimeReturn }}</ion-text>
@@ -28,13 +26,16 @@
       {{ requestData.szstatusname }}</ion-button>
     <ion-button shape="round" slot="end" *ngIf="requestData.szstatusid == 'ST003'" color="hk-yellow">
       {{ requestData.szstatusname }}</ion-button>
-    <ion-icon name="close-circle" slot="end" color="hk-red" (click)="DeleteRequest(requestData.szactivityid)"></ion-icon>
+    <ion-icon name="close-circle" slot="end" color="hk-red" (click)="DeleteRequest(requestData.szactivityid)">
+    </ion-icon>
   </ion-item>
   <div class="ion-text-start" padding style="padding-top: 0px">
     <ion-text>Keterangan : {{ requestData.szdesc }}</ion-text> <br>
     <ion-text *ngIf="requestData.szactivityid == 'AC002'">Total : {{ requestData.dectotal }}</ion-text>
-    <ion-text *ngIf="requestData.szactivityid == 'AC003'"> Lokasi : {{ requestData.szLocation }} <br/>  <img src="{{ photo }}"class="center" /></ion-text>
-    <ion-text *ngIf="requestData.szactivityid == 'AC004'"> Lokasi : {{ requestData.szLocation }} <br/>  <img src="{{ photo }}" class="center" /></ion-text>
+    <ion-text *ngIf="requestData.szactivityid == 'AC003'"> Lokasi : {{ requestData.szLocation }} <br /> <img
+        src="{{ photo }}" class="center" /></ion-text>
+    <ion-text *ngIf="requestData.szactivityid == 'AC004'"> Lokasi : {{ requestData.szLocation }} <br /> <img
+        src="{{ photo }}" class="center" /></ion-text>
     <ion-text *ngIf="requestData.szactivityid == 'AC005'">Total : {{ requestData.dectotal }} </ion-text>
   </div>
 </ion-card>
