--- a/src/app/components/form-lembur/form-lembur.component.html
+++ b/src/app/components/form-lembur/form-lembur.component.html
@@ -6,9 +6,7 @@
   <ion-card-content>
     <ion-col>
       <ion-item>
-        <!-- <ion-input type="text" placeholder="Jam Datang" [(ngModel)]="timeArrived" name="timeArrived" required>}</ion-input>
-         -->
-         {{txtTimeNow}}
+        {{txtTimeRequest}}
       </ion-item>
     </ion-col>
 
@@ -19,7 +17,7 @@
       </ion-item>
     </ion-col>
 
-    
+
   </ion-card-content>
 
   <ion-row class="ion-align-items-center">
@@ -28,5 +26,5 @@
       </ion-button>
     </ion-col>
   </ion-row>
-  
+
 </ion-card>
