--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -17,7 +17,7 @@
   <ion-button expand="full" shape="round" (click)="ForLog()">Cek log</ion-button> -->
   <ion-text style="font-size: 14px">Status: </ion-text>
   <ion-text style="font-size: 14px ;" color="{{colorStatus}}">{{ txtWorkStatus }}</ion-text>
-  <!--<p>Example just hit <a target="_blank" rel="noopener" href="https://www.hutamakarya.com/id/">hutama karya</a>
+  <!--<p>Example just hit <a target="_blank" rel="noopener" href="http://www.hutamakarya.com/id/">hutama karya</a>
     text.
   </p>-->
 
