--- a/src/app/main/main.page.html
+++ b/src/app/main/main.page.html
@@ -23,9 +23,9 @@
       </ion-menu-toggle>
       <hr>
       <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;">
-        <ion-text>Settings and Privacy</ion-text>
+        <ion-text>Manage Account Settings</ion-text>
       </ion-item>
-      <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;">
+      <ion-item button mode="md" Lines="none" color="hk-white-red" style="--min-height: 55px;" href="http://www.hutamakarya.com/id/">
         <ion-text>Help Center</ion-text>
       </ion-item>
     </ion-content>
