- Tes API Sugihart - Modify settingPage

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -15,6 +15,12 @@
   <ion-button expand="full" shape="round" (click)="MultipleNotif()">Multiple</ion-button>
   <ion-button expand="full" shape="round" (click)="ScheduleNotif()">Schedule Delayed</ion-button>
   <ion-button expand="full" shape="round" (click)="ForLog()">Cek log</ion-button> -->
+  <ion-button expand="full" shape="round" (click)="APILogin()">API Login</ion-button>
+  <ion-button expand="full" shape="round" (click)="TampilToken()">Tampil Token</ion-button>
+  <ion-button expand="full" shape="round" (click)="APIGetEmployee()">API Get Employee</ion-button>
+
+  <ion-text style="font-size: 14px">Response: {{ txtResponse }}</ion-text> <br>
+  
   <ion-text style="font-size: 14px">Status: </ion-text>
   <ion-text style="font-size: 14px ;" color="{{colorStatus}}">{{ txtWorkStatus }}</ion-text>
   <!--<p>Example just hit <a target="_blank" rel="noopener" href="http://www.hutamakarya.com/id/">hutama karya</a>
